WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
291543
[JSC] Fix CloneHelper usage in loop unrolling to pass both original and clone blocks
https://bugs.webkit.org/show_bug.cgi?id=291543
Summary
[JSC] Fix CloneHelper usage in loop unrolling to pass both original and clone...
Yijia Huang
Reported
2025-04-14 15:36:02 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-04-14 15:36:14 PDT
<
rdar://problem/149243490
>
Yijia Huang
Comment 2
2025-04-14 15:43:27 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/44072
EWS
Comment 3
2025-04-15 07:55:30 PDT
Committed
293708@main
(dd6466790ff0): <
https://commits.webkit.org/293708@main
> Reviewed commits have been landed. Closing PR #44072 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug