[JSC] Fix CloneHelper usage in loop unrolling to pass both original and clone blocks https://bugs.webkit.org/show_bug.cgi?id=291543 rdar://149243490

Reviewed by Yusuke Suzuki.

Fixes the call to CloneHelper::cloneBlock to correctly pass both the original and cloned
BasicBlock to the customization lambda. This ensures the successor customization logic
can distinguish which block is being cloned and update the tail block’s branch correctly.

Previously, only the clone block was passed, which caused ambiguity and incorrect behavior
when customizing successors in loop unrolling.

Also updates the loop unrolling logic to clone from the loop header directly instead of
looping through all blocks, simplifying the logic and improving correctness.

* Source/JavaScriptCore/dfg/DFGCloneHelper.h:
(JSC::DFG::CloneHelper::cloneBlock):
* Source/JavaScriptCore/dfg/DFGLoopUnrollingPhase.cpp:
(JSC::DFG::LoopUnrollingPhase::unrollLoop):

Canonical link: https://commits.webkit.org/293708@main